test/classes/delete-free/coercions-upon-return.good
coercions-upon-return.chpl:9: error: Could not coerce Gen(real(64)) to unmanaged Gen upon return
